@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Fixed bug 1521837: no entries for 'deleted entries' at 'activity.log'
  - Fixed bug 1522560: 'Scheduling Conflict events' will be displayed in mixed
  - Fixed bug 1530179: 'Public Access' using UAC will not be translated
  - Fixed bug 1518552: PHP5 and MySQLi Warnings
